public/css/index.css
@font-face {
    font-family: 'Inter var';
    font-weight: 100 900;
    font-display: swap;
    font-style: normal;
    font-named-instance: 'Regular';
    src: url("../fonts/Inter-roman.var.woff2") format("woff2");
  }
  @font-face {
    font-family: 'Inter var';
    font-weight: 100 900;
    font-display: swap;
    font-style: italic;
    font-named-instance: 'Italic';
    src: url("../fonts/Inter-italic.var.woff2") format("woff2");
  }
  @font-face {
    font-family: 'Newsreader Display Italic';
    font-weight: 900;
    font-display: swap;
    font-style: italic;
    font-named-instance: 'Newsreader Display Italic';
    src: url("../fonts/Newsreader72pt-ExtraBoldItalic.woff2") format("woff2");
  }
  @font-face {
    font-family: 'Newsreader';
    font-weight: 100 900;
    font-display: swap;
    font-style: normal;
    font-named-instance: 'Regular';
    src: url("../fonts/Newsreader.woff2") format("woff2");
  }
  @font-face {
    font-family: 'Newsreader';
    font-weight: 100 900;
    font-display: swap;
    font-style: italic;
    font-named-instance: 'Italic';
    src: url("../fonts/Newsreader-Italic.woff2") format("woff2");
  }

/* Defaults */
:root {
	--font-family: 'Inter var', system-ui, sans-serif;
	--font-familiy-display-serif: 'Newsreader Display Italic', serif;
	--font-family-serif: 'Newsreader', serif;
	--font-headings: 'Inter var', system-ui, sans-serif;
	--font-family-monospace: Consolas, Menlo, Monaco, Andale Mono WT, Andale Mono, Lucida Console, Lucida Sans Typewriter, DejaVu Sans Mono, Bitstream Vera Sans Mono, Liberation Mono, Nimbus Mono L, Courier New, Courier, monospace;
}

/* Responsive typography */
:root {
	--font-size-xs: clamp(0.64rem, 0.11vw + 0.62rem, 0.7rem);
	--font-size-sm: clamp(0.8rem, 0.23vw + 0.75rem, 0.94rem);
	--font-size-base: clamp(1rem, 0.42vw + 0.92rem, 1.25rem);
	--font-size-md: clamp(1.25rem, 0.69vw + 1.11rem, 1.67rem);
	--font-size-lg: clamp(1.56rem, 1.1vw + 1.34rem, 2.22rem);
	--font-size-xl: clamp(1.95rem, 1.68vw + 1.62rem, 2.96rem);
	--font-size-xxl: clamp(2.44rem, 2.51vw + 1.94rem, 3.95rem);
	--font-size-xxxl: clamp(3.05rem, 3.68vw + 2.32rem, 5.26rem);
}

/* Theme colors */
:root {
	--color-gray-20: #e0e0e0;
	--color-gray-40: #C0C0C0;
	--color-gray-60: #787878;
	--color-gray-80: #333;

	--color-midnight-20: #E3E4E5;
	--color-midnight-40: #7792a9;
	--color-midnight-60: #496174;
	--color-midnight-80: #0F2B42;

	--color-base-bg: #FFFCF5;

	--text-color: var(--color-midnight-80);
	--text-color-link: #082840;
	--text-color-link-active: #5f2b48;
	/* --text-color-link-visited: #17050F;   */
	--text-color-link-visited: var(--text-color);
	--subtle-border: #2b3e513a;
	--border-radius: 10px;

	--syntax-tab-size: 2;
}

@media (prefers-color-scheme: dark) {
	:root {
		--color-gray-20: #333;
		--color-gray-40: #787878;
		--color-gray-60: #C0C0C0;
		--color-gray-80: #e0e0e0;

		--color-midnight-20: #0F2B42;
		--color-midnight-40: #496174;
		--color-midnight-60: #7792a9;
		--color-midnight-80: #E3E4E5;

		/* --text-color: var(--color-midnight-20); */
		--text-color-link: #1493fb;
		--text-color-link-active: #6969f7;
		--text-color-link-visited: #a6a6f8;

		--color-base-bg: #15202b;
		
	}

	img {
		opacity: .6;
    	transition: opacity .5s ease-in-out;
	}
	img:hover {
		opacity: 1;
	}
}


/* Global stylesheet */
* {
	box-sizing: border-box;
}

html,
body {
	padding: 0;
	margin: 0 auto;
	font-family: var(--font-family);
	color: var(--text-color);
	background-color: var(--color-base-bg);
}
html {
	overflow-y: scroll;
}
body {
	font-size: var(--font-size-base);
	padding: 1rem;
}

main {
	max-width: 80em;
	margin: 0 auto;
}

article {
	max-width: 48em;
	margin: 0 auto;
}

aside {
	font-size: smaller;
	background-color: var(--color-midnight-20);
	margin-bottom: 2rem;
	padding: 1.2rem 1rem 1.8rem;
	border-radius: var(--border-radius);
}

aside h2 {
	margin-top: 0px;
}

@media screen and (min-width: 650px) {
	aside {
		padding: 3.2rem 3rem 3.8rem;
	}
}

h1,
h2,
h3 {
	font-family: var(--font-headings);
	font-weight: 900;
	font-variation-settings: "wght" 900;
	line-height: 1.12;
}

h1 {
	font-size: var(--font-size-xl);
	margin-block-start: .04em;
}

h2 {
	font-size: var(--font-size-lg);
}

h2, h3 {
	margin: 2.4rem 0 .8rem;
}

p, ul, ol {
	margin: 0px 0px 20px;
  }

ul li,
ol li {
	margin-bottom: 0.8rem;
}

blockquote {
	font-family: var(--font-family-serif);
	font-variation-settings: "wght" 500;
	font-size: var(--font-size-xl);
	line-height: 1.12;
	text-align: center;
	margin: 2rem;
}

blockquote p {
	font-size: var(--font-size-md);
	line-height: 1.1;
}

small {
	font-size: var(--font-size-sm);
}
.small-caps {
	font-variant-caps: all-small-caps;
	letter-spacing: .08rem;
}
.serif {
	font-family: var(--font-family-serif);
}
.centered {
	text-align: center;
}
figure {
	display: block;
    margin-block-start: 0px;
    margin-block-end: 2.8rem;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
}
figcaption,
.caption {
	font-family: var(--font-family-serif);
	font-weight: inherit;
	font-style: italic;
	text-align: center;
    margin-top: 1.2rem;
}
figure img,
img.thumbnail,
li.postlist-item a picture img {
	border-radius: var(--border-radius); 
}
li.postlist-item a picture img {
	aspect-ratio: 16 / 9;
	object-fit: cover;
}
li.postlist-item a picture img:hover {
	opacity: .8;
}
img {
	width: 100%;
	height: auto;
}

figure.stamp {
	display:flex;
	flex-direction: column;
	align-items: center;
}

figure.stamp img {
	width: 300px; 
	max-width: 100%; 
	height:auto; 
	margin-left: auto; 
	margin-right:auto;
}

iframe.yt-shortcode {
	aspect-ratio: 16 / 9;
	width: 100%;
}

/* https://www.a11yproject.com/posts/how-to-hide-content/ */
.visually-hidden {
	clip: rect(0 0 0 0);
	clip-path: inset(50%);
	height: 1px;
	overflow: hidden;
	position: absolute;
	white-space: nowrap;
	width: 1px;
}

p:last-child {
	margin-bottom: 0;
}
p {
	line-height: 1.5;
}

li {
	line-height: 1.5;
}

a[href] {
	color: var(--text-color-link);
}
/* ... */

